--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+POSTGRES_DB=bus-buddy
+POSTGRES_USER=bus-buddy-employee
+POSTGRES_PASSWORD=admin
 Host=localhost
 ports=5432
