--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,13 @@
+annotated-types
+anyio
+click
+colorama
 fastapi
+h11
+idna
+pydantic
+pydantic_core
+sniffio
+starlette
+typing_extensions
+uvicorn
