added file for parsing realtime
it gives the response , tested with both protobuf , got the files
- developed oop style so we can use it in project
- added pb files to env , safer call

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ POSTGRES_USER=bus-buddy-employee
 POSTGRES_PASSWORD=admin
 Host=localhost
 ports=5432
+TripUpdates=https://drtonline.durhamregiontransit.com/gtfsrealtime/TripUpdates
+VehiclePositions=https://drtonline.durhamregiontransit.com/gtfsrealtime/VehiclePositions
