--- a/backend/.env copy
+++ b/backend/.env copy
@@ -3,3 +3,5 @@ POSTGRES_USER=bus-buddy-employee
 POSTGRES_PASSWORD=admin
 Host=localhost
 ports=5432
+TripUpdates=https://drtonline.durhamregiontransit.com/gtfsrealtime/TripUpdates
+VehiclePositions=https://drtonline.durhamregiontransit.com/gtfsrealtime/VehiclePositions
