--- a/FE/package.json
+++ b/FE/package.json
@@ -14,8 +14,10 @@
     "leaflet": "^1.9.4",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0-rc.2",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.15",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
