added alerts extractor and api endpoint

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ Host=localhost
 ports=5432
 TripUpdates=https://drtonline.durhamregiontransit.com/gtfsrealtime/TripUpdates
 VehiclePositions=https://drtonline.durhamregiontransit.com/gtfsrealtime/VehiclePositions
+Alerts=https://maps.durham.ca/OpenDataGTFS/alerts.pb
