--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,56 @@
 annotated-types
 anyio
+certifi
+charset-normalizer
 click
 colorama
+contourpy
+cycler
 fastapi
+filelock
+fonttools
+fsspec
+greenlet
+gtfs-realtime-bindings
 h11
 idna
+Jinja2
+kiwisolver
+MarkupSafe
+matplotlib
+mpmath
+networkx
+numpy
+opencv-python.86
+packaging
+pandas
+pillow
+protobuf
+psutil
+psycopg2
+py-cpuinfo
 pydantic
 pydantic_core
+pyparsing
+python-dateutil.post0
+python-dotenv
+pytz
+PyYAML
+requests
+scipy
+seaborn
+setuptools
+six
 sniffio
+SQLAlchemy
 starlette
+sympy
+torch
+torchvision
+tqdm
 typing_extensions
+tzdata
+ultralytics
+ultralytics-thop
+urllib3
 uvicorn
