backend , driver  documentation

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,31 @@
+alabaster
 annotated-types
 anyio
+babel
 certifi
 charset-normalizer
 click
 colorama
 contourpy
 cycler
+Deprecated
+docutils
 fastapi
+fastapi-limiter
 filelock
 fonttools
 fsspec
 greenlet
 gtfs-realtime-bindings
 h11
+httpcore
+httpx
 idna
+imagesize
 Jinja2
 kiwisolver
+lap
+limits
 MarkupSafe
 matplotlib
 mpmath
@@ -24,6 +34,7 @@ numpy
 opencv-python
 packaging
 pandas
+piccolo_theme
 pillow
 protobuf
 psutil
@@ -31,17 +42,30 @@ psycopg2
 py-cpuinfo
 pydantic
 pydantic_core
+Pygments
+PyJWT
 pyparsing
 python-dateutil
 python-dotenv
 pytz
 PyYAML
+redis
 requests
+roman-numerals-py
 scipy
 seaborn
 setuptools
+shapely
 six
 sniffio
+snowballstemmer
+Sphinx
+sphinxcontrib-applehelp
+sphinxcontrib-devhelp
+sphinxcontrib-htmlhelp
+sphinxcontrib-jsmath
+sphinxcontrib-qthelp
+sphinxcontrib-serializinghtml
 SQLAlchemy
 starlette
 sympy
@@ -54,3 +78,4 @@ ultralytics
 ultralytics-thop
 urllib3
 uvicorn
+wrapt
